--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
     "react-rating-stars-component": "^2.2.0",
+    "react-slick": "^0.28.1",
     "reactstrap": "^8.9.0",
     "url-slug": "^3.0.2"
   },
