--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "gatsby-starter-default",
+  "name": "happyfoodie.co",
   "private": true,
-  "description": "A simple starter to get up and developing quickly with Gatsby",
+  "description": "sitio recomendacion comidas",
   "version": "0.1.0",
-  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
+  "author": "daniel ramirez <esqui9710@gmail.com>",
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.4",
     "@material-ui/core": "^4.12.3",
